crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__an_int_literal_keyed_array_element_carries_the_integer_unrendered.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:27
    v1 = array.new []  ; array
    v2 = const.int 5  ; int
    v3 = const.str "a"  ; string
    v4 = array.set v1, v2, v3  ; array
    release v4
    release v0
    return
}
