crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__appending_a_fresh_int_value_needs_no_retain.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    ; stmt s0 @4:5-4:14
    v2 = const.int 1  ; int
    v3 = array.append v1, v2 ! bb1  ; array
    release v3
    release v0
    return
  bb1:
    release v1
    release v0
    propagate "m() at t.nvs:4"
}
