crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__appending_to_a_property_keeps_the_concat_rewrite.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @5:5-5:21
    v1 = field.get v0, T::p  ; string
    v2 = const.str "x"  ; string
    v3 = concat v1, v2  ; string
    release v2
    v4 = field.get v0, T::p  ; string
    release v4
    field.set v0, T::p, v3
    release v0
    return
}
