crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__appending_to_a_string_local_appends_in_place_rather_than_concatenating.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, string) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; string
    ; stmt s0 @4:5-4:19
    v2 = const.str ""  ; string
    ; stmt s1 @5:5-5:20
    v3 = str.append v2, v1  ; string
    ; stmt s2 @6:5-6:17
    release v1
    release v0
    return v3
}
