crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__assigning_a_string_local_its_own_concatenation_hands_the_binding_over.snap
---
source: crates/nvs-ir/src/lower/tests.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, string) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; string
    ; stmt s0 @4:5-4:19
    v2 = const.str ""  ; string
    ; stmt s1 @5:5-5:26
    v3 = concat v2, v1  ; string
    ; stmt s2 @6:5-6:17
    release v1
    release v0
    return v3
}
