crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__assigning_one_string_local_to_another_retains_the_shared_value.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn pick(object) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:25
    v1 = const.str "hello"  ; string
    ; stmt s1 @5:5-5:20
    retain v1
    ; stmt s2 @6:5-6:15
    release v1
    release v0
    return v1
}
